testsuite/poke.pkl/struct-method-diag-10.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    var n = 10;
    int i;
    method foo = int:
      {
        return n + i; /* { dg-error "invalid.*variable" } */
      }
  };
